# PHAME_MCP

./: .gitignore  README.md  get_portkey_env_var.ps1  install-venv-requirements.sh  pyproject.toml  set_portkey_env_var.ps1.template  set_portkey_env_var.sh.template
configs/: amundrj1_CLIP-ViT-Large-Patch14.yml  test_portkey.yml
phame/agents/: chat.py  design_agents.py  librarian.py  supervisor.py  utils.py
phame/docling/: ex_batch_conversion.py  main.py
phame/haystack/: agent_calls_rag.py  cad_query_rag.py  haystack_first_QA_pipeline.py  trusted_references_rag.py  trusted_references_rag_full.py  trusted_references_rag_runner.sh
phame/llm/: analysis_agents.py  basemodels.py  fix_cad.py  generate_analsys_agentic.py  generate_part.py  generate_part_rag.py  generation_chain.py  rag_graph.py  utils.py
phame/mcp/: main.py  run_server.py  server_app.py
phame/mcp/mcp_clients/: base_client.py  cadquery_client.py  librarian_client.py
phame/mcp/mcp_servers/: cadquery_server.py  librarian_server.py
phame/mcp/servers/: cadquery_server.py  librarian_server.py
phame/mcp/supervisor/: supervisor_mcp.py
phame/rag_utils/: build_rag.py  build_rag_text2cad.py  globals.py  query_rag.py
solidworks/: BracketMacro20260102.py  BracketMacro20260103.py  BracketMacro20260113.py  sim_bracket.py  sw_smoke_test.py
solidworks/human_gen_examples/: create_bracket.py  create_crank_arm.py  create_enclosure.py
